--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     </div>
 
     <nav id="desktop-nav" class="nav-links" aria-label="Main navigation">
-      <a href="index.html">Home</a>
+      <a href="index.html">About</a>
       <a href="projects.html">Projects</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
     </nav>
 
     <nav id="mobile-nav" class="nav-links" aria-label="Mobile navigation">
-      <a href="index.html">Home</a>
+      <a href="index.html">About</a>
       <a href="projects.html">Projects</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
@@ -46,75 +46,210 @@
 <main>
 
 <!-- PAGE TITLE -->
-  <h1 class="page-title">Research Support<br>
-    <span class="small-text">Data Analytics and Coding</span>
+  <h1 class="page-title">Data Science & Research Support<br>
+    <span class="small-text">About me</span>
   </h1>
 
-  <!-- SECTION 1 -->
-  <section class="section reveal">
-    <div class="section-content">
-      <div class="section-image">
-        <img class="large-img" src="assets/images/2kh_high_pass.png" alt="High pass filter visualization" />
-      </div>
+<!-- SECTION 0: Bio -->
+<section class="section reveal" id="bio">
+  <div class="section-content">
 
-      <div class="section-text">
-        <h2>Deciphering your Data</h2>
-        <ul>
-          <li>Data organisation and cleaning</li>
-          <li>Exploratory Data Analysis (EDA)</li>
-          <li>Find key datapoints and connections between</li>
-        </ul>
-        <div class="widgets">
-          <img src="assets/icons/Microsoft_Office_Excel_(2019–2025).svg" alt="Matlab" class="widget-icon">
-          <img src="assets/icons/Matlab_Logo.png" alt="Matlab" class="widget-icon">
+    <!-- LEFT: Text -->
+    <div class="section-text">
+      <h2>John Holik</h2>	
+      <p>
+        I am a researcher working at the intersection of speech science, signal processing,
+        and applied analytics. My work focuses on developing automated methods for analysing complex
+        acoustic and behavioural data with an emphasis on reliability, transparency, and practical impact.
+      </p>
+
+      <h3>Experience</h3>
+      <ul>
+        <li>Researcher in speech and audio analytics at the <a href="https://www.sydney.edu.au/medicine-health/industry-and-community/community-engagement/sydney-voice-lab.html"
+     target="_blank" rel="noopener noreferrer">Sydney Voice Lab, University of Sydney</a> </li>
+        <li>Scientific software and GUI tool development</li>
+        <li>Customisation of automated transcription and diarisation pipelines</li>
+        <li>Laboratory setup and operation for advanced materials synthesis (Physical Vapour Deposition) and characterisation (Spectroscopy, Electron Microscopy, Atomic Force Microscopy, X-ray Diffraction)</li>
+      </ul>
+
+      <h3>Teaching</h3>
+      <ul>
+        <li>In my role in the Syndey Voice Lab I provided assistance and guidance to Speech Pathology Honours students</li>
+        <li>I have over 10 years experience running tutorials and laboratories in first year Radiation Physics, Physics, Statistics and Mathematics accross both The University of Sydney and Western Sydney University</li>
+      </ul>
+
+    </div>
+
+    <!-- RIGHT: Headshot -->
+    <div class="section-image">
+      <img class="large-img headshot" 
+           src="assets/images/DLVP_headshot_1.jpg" 
+           alt="Portrait of John Holik" />
+    </div>
+
+  </div>
+</section>
+
+<!-- LANGUAGES -->
+<section class="section reveal">
+  <div class="section-content">
+    <div class="centered-section">
+
+      <h2>Coding & Automation Skills</h2>
+      <p>I work with the following languages and software:</p>
+
+      <div class="language-grid">
+
+        <!-- General Programming -->
+        <div class="language-card">
+          <h3>
+			<span class="lang-title">General Programming</span>
+			<span class="lang-sub">Python, MATLAB, Android Studio, Gradle</span>
+		  </h3>
+          <div class="widgets">
+            <img src="assets/icons/python-happy.png" alt="Python" class="widget-icon">
+            <img src="assets/icons/Matlab_Logo.png" alt="MATLAB" class="widget-icon">
+            <img src="assets/icons/android-studio-stable.svg" alt="Android Studio" class="widget-icon">
+            <img src="assets/icons/gradle-plain-logo-icon.png" alt="Gradle" class="widget-icon">
+          </div>
         </div>
+
+        <!-- Statistical Computing -->
+        <div class="language-card">
+          <h3>
+			<span class="lang-title">Statistical Computing</span>
+			<span class="lang-sub">R, SPSS</span>
+		  </h3>
+          <div class="widgets">
+            <img src="assets/icons/R_logo.svg" alt="R" class="widget-icon">
+            <img src="assets/icons/Logo_SPSS.png" alt="SPSS" class="widget-icon">
+          </div>
+        </div>
+
+        <!-- Spreadsheet Automation -->
+        <div class="language-card">
+          <h3>
+			<span class="lang-title">Spreadsheet Automation</span>
+			<span class="lang-sub">Python Pandas, Excel (Macros / VBA)</span>
+		  </h3>
+          <div class="widgets">
+            <img src="assets/icons/pandas-python.png" alt="Pandas" class="widget-icon">
+            <img src="assets/icons/Microsoft_Office_Excel_(2019–2025).svg" alt="Excel" class="widget-icon">
+          </div>
+        </div>
+
+        <!-- Audio & Speech Analysis -->
+        <div class="language-card">
+          <h3>
+			<span class="lang-title">Audio & Speech Analysis</span>
+			<span class="lang-sub">Audacity, Praat Scripting</span>
+		  </h3>
+          <div class="widgets">
+            <img src="assets/icons/Audacity_Logo.svg" alt="Audacity" class="widget-icon">
+            <img src="assets/icons/Praat.svg" alt="Praat" class="widget-icon">
+          </div>
+        </div>
+
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- SECTION 2 -->
-  <section class="section reveal">
-    <div class="section-content">
-      <div class="section-image">
-        <img class="large-img" src="assets/images/2kh_high_pass.png" alt="High pass filter visualization" />
-      </div>
+<section class="section reveal" id="publications">
+  <div class="section-content single-column">
 
-      <div class="section-text">
-        <h2>Statistical Analysis</h2>
-        <ul>
-          <li>Run statistical analyses tailored to your data</li>
-          <li>Produce engaging and informative visuals</li>
-          <li>Employ mixed models with multi-modal data</li>
+    <div class="section-text">
+      <h2>Publications</h2>
+
+	  <details class="pub-details" id="orcid-journals">
+	    <summary>Journal Articles</summary>
+	    <ul class="publications-list" id="orcid-journal-list">
+		  <li>Loading publications…</li>
+	    </ul>
+  	  </details>
+
+      <details class="pub-details">
+        <summary>Conferences</summary>
+        <ul class="publications-list">
+		  <li>
+		    <b>John Holik</b>, Duy Duong Nguyen, Tünde Szalay, Tomás Arias-Vergara, Michael Döllinger, Catherine Madill (2025) – 
+		    <span class="poster-trigger">
+			  Vocal Rise Time (VRT) measurement for Vowel Onset: Optimal algorithm selection for VRT signal envelope generation,
+			  <div class="poster-preview">
+			    <img src="assets/posters/Poster_Holik_VRT_Measurement_For_Vowel_Onset__AQL_2025__final_2.jpg" alt="AQL Conference Poster">
+			  </div>
+		    </span>
+		    <em>Advances in Quantitative Laryngology, Voice and Speech Research (16<sup>th</sup>) — Groningen, June 24 – 27, 2025</em>.
+		  </li>
+          <li>Tuende Szalay, Duy Duong Nguyen, <b>John Holik</b>, Antonia Chacon, James Morandini, Catherine J. Madill (2024) - Acoustic Differences Between Gay And Straight Male Speakers Of Australian English, <em>The Voice Foundation, 53<sup>rd</sup> Annual symposium, Philadelphia, 29 May – 3 June 2024</em>.</li>
+		  <li>
+		    Tünde Szalay, <b>John Holik</b>, Duy Duong Nguyen, James Morandini, Catherine J. Madill (2023) – 
+		    <span class="poster-trigger">
+			  M1 of /s/ in straight & gay voices in three analysis windows,
+			  <div class="poster-preview">
+			    <img src="assets/posters/szalay_holik_nguyen_morandini_madill_GVS_methods_poster_final_printed.jpg" alt="AQL Conference Poster">
+			  </div>
+		    </span>
+		    <em>INTERSPEECH 2023, Dublin, 20-24 August 2023</em>.
+		  </li>
+          <li><b>John Holik</b>  Tuende Szalay, Duy Nguyen, Catherine Madill (2023) - Advancing Acoustical Analysis Research-level measurement tools for professional and clinical applications, <em>Acoustics 23, Sydney, 4-8 December 2023</em>.</li>
+          <li>Antonia Chacon, Duy Duong Nguyen, <b>John Holik</b>, Michael Döllinger, Tomás Arias-Vergara, Cate Madill (2022) - Voice Onset Measurement: A Systematic Review, <em>The Voice Foundation, 51<sup>st</sup> Annual symposium, Philadelphia, 1-5 June 2022</em>.</li>
+          <li><b>John Holik</b> (2019) - Atlas based auto segmentation of head and neck cancer: performance evaluation of MIM Maestro ® software, <em>MedPhys19, Camperdown, University of Sydney, 10 December 2019</em>.</li>
+		  <li>
+		    <b>John Holik</b>, Daniel Truant, Jonathan Sykes (2019) – 
+		    <span class="poster-trigger">
+			  Atlas based auto-segmentation of head and neck cancer: Performance evaluation of MIM Maestro® software,
+			  <div class="poster-preview">
+			    <img src="assets/posters/EPSM2019_Poster_FINAL.jpg" alt="EPSM Conference Poster">
+			  </div>
+		    </span>
+		    <em>EPSM 2019, Engineering and Physical Sciences in Medicine, Perth, 28–30 October 2019</em>.
+		  </li>
+          <li><b>John Holik</b> (2014) - Using Magnetron Sputtering to Process TiO<sub>2</sub>- based  Materials with Improved Charge Separation, <em>Combined Australian Materials Societies, Camperdown, University of Sydney, 26-28 November 2014</em>.</li>
+		  <li>
+		    <b>John Holik</b> (2014) – 
+		    <span class="poster-trigger">
+			  Processing of titanium dioxide thin films for solar hydrogen production,
+			  <div class="poster-preview">
+			    <img src="assets/posters/3MT_John_Holik_UWS_SCEM_FINAL.jpg" alt="3MT Conference Poster">
+			  </div>
+		    </span>
+		    <em>3 Minute Thesis Competition, Parramatta, University of Western Sydney, 1 July 2014</em>.
+		  </li>
+		  <li><b>John Holik</b> (2013) - Investigations of magnetron sputtering techniques to deposit crystalline titanium dioxide thin films, <em>Research Futures Postgraduate Forum 2013, Penrith, University of Western Sydney, 8-10 June 2011</em>.</li>
+		  <li><b>John Holik</b> (2011) - Solar hydrogen generation using titanium dioxide thin films deposited by magnetron sputtering, <em>Environmental Research Event 2011, North Stradbroke Island, The University of Queensland, 26-29 June 2011</em>.</li>
+		  <li><b>John Holik</b> (2011) - Processing of TiO2-based Thin Films with Minimised Recombination Losses for Solar Energy Conversion Applications, <em>Research Futures Postgraduate Forum 2011, Penrith, University of Western Sydney, 8-10 June 2011</em>.</li>
         </ul>
-        <div class="widgets">
-          <img src="assets/icons/R_logo.svg" alt="Matlab" class="widget-icon">
-          <img src="assets/icons/Logo_SPSS.png" alt="SPSS" class="widget-icon">
-        </div>
-      </div>
-    </div>
-  </section>
+      </details>
 
-  <!-- SECTION 3 -->
-  <section class="section reveal">
-    <div class="section-content">
-      <div class="section-image">
-        <img class="large-img" src="assets/images/2kh_high_pass.png" alt="High pass filter visualization" />
-      </div>
-
-      <div class="section-text">
-        <h2>Coding and Large Language Models</h2>
-        <ul>
-          <li>Build a field/clinic data collection App</li>
-          <li>Setup a local LLM to process sensitive data</li>
-          <li>Streamline routine analysis workflows with a Graphical User Interface (GUI)</li>
+      <details class="pub-details">
+        <summary>Technical Reports</summary>
+        <ul class="publications-list">
+          <li><b>John Holik</b>, Marta Bello Lamo, R Ding, J J Lee, Sean Li, D Wang, Richard Wuhrer and Leigh R Sheppard (2014) - Development of Sputtered Films for Solar-Hydrogen Production at UWS Hawkesbury <em>Materials Australia, Vol 47, No 1, June.</em></li>
         </ul>
-        <div class="widgets">
-          <img src="assets/icons/python-happy.png" alt="Python" class="widget-icon">
-          <img src="assets/icons/Machine-Learning-Brain.svg" alt="Machine-Learning-Brain" class="widget-icon">
-        </div>
-      </div>
+      </details>
+
+  	  <details class="pub-details">
+	    <summary>Theses</summary>
+	    <ul class="publications-list">
+		  <li><b>John Holik</b> (2019) - Atlas based auto segmentation of head and neck cancer: performance evaluation of MIM Maestro&reg; software. <em>Master of Medical Physics, Institute of Medical Physics, University of Sydney</em>.</li>
+		  <li><b>John Holik</b> (2009) - A Spectroscopic Study of a High Power Impulse Magnetron Sputtering (HiPIMS) Plasma Discharge. 
+		  <em>Graduate Diploma of Science (Physics), Department of Applied & Plasma Physics, University of Sydney</em>.</li>
+	    </ul>
+	  </details>
+
+
     </div>
-  </section>
+
+  </div>
+</section>
+
+<p style="text-align:center; margin-top:2rem;">
+  <a href="contact.html"
+     style="color:var(--accent); font-weight:600; font-size:1.15rem; text-decoration:none;">
+    Contact me
+  </a>
+</p>
 
 </main>
 
