--- a/projects.html
+++ b/projects.html
@@ -23,14 +23,14 @@
     </div>
 
     <nav id="desktop-nav" class="nav-links" aria-label="Main navigation">
-      <a href="index.html">Home</a>
+      <a href="index.html">About</a>
       <a href="projects.html">Projects</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
     </nav>
 
     <nav id="mobile-nav" class="nav-links" aria-label="Mobile navigation">
-      <a href="index.html">Home</a>
+      <a href="index.html">About</a>
       <a href="projects.html">Projects</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
@@ -41,30 +41,51 @@
 <main>
 
 <!-- PAGE TITLE -->
-  <h1 class="page-title">Research Support<br>
-    <span class="small-text">Projects Portfolio</span>
+  <h1 class="page-title">Data Science & Research Support<br>
+    <span class="small-text">Projects</span>
   </h1>
 
-  <!-- PROJECT 1 TEMPLATE -->
+  <!-- PROJECT 1 -->
   <section class="section reveal">
     <div class="section-content">
-
       <div class="section-image">
-        <img class="large-img" src="assets/images/2kh_high_pass.png" alt="High pass filter visualization" />
+        <img class="large-img" src="assets/images/NeAP_android_Studio_screenshot_tight.png" alt="NeAP pitch discrimination App Android Studio screenshot" />
+      </div>
+
+      <div class="section-text">
+        <h2>Acoustic Measurement App</h2>
+        <ul>
+          <li>PC based measurment not being utilised in the clinic</li>
+          <li>Measurment algorithms and technique reproduced in a mobile app</li>
+          <li>Patients/clients can run the app in the waiting room, so data collection is activated in this setting</li>
+        </ul>
+        <div class="widgets">
+          <img src="assets/icons/android-studio-stable.svg" alt="Android Studio" class="widget-icon">
+          <img src="assets/icons/gradle-plain-logo-icon.png" alt="Gradle" class="widget-icon">
+          <img src="assets/icons/mobile-APP-02.png" alt="Mobile App" class="widget-icon">
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- PROJECT 2 -->
+  <section class="section reveal">
+    <div class="section-content reverse">
+      <div class="section-image">
+        <img class="large-img" src="assets/images/audio_visual_parse_gui.png" alt="High pass filter visualization" />
       </div>
 
       <div class="section-text">
         <h2>Audio Processing Workflow Improvements</h2>
         <ul>
           <li>Audio waveforms required to be parsed, measured and edited</li>
-          <li>Developed Python scripts to automate </li>
           <li>Built GUI tool for timestamping & annotation</li>
+          <li>Workflow speed and accuracy greatly imporoved</li>
         </ul>
 
         <div class="widgets">
-          <img src="assets/icons/python-colour.svg" alt="Python" class="widget-icon">
           <img src="assets/icons/python-happy.png" alt="Python" class="widget-icon">
-          <img src="assets/icons/github-mark-white.svg" alt="GitHub" class="widget-icon">
           <img src="assets/icons/GUI-blue-large-white.svg" alt="GUI" class="widget-icon">
         </div>
       </div>
@@ -72,23 +93,21 @@
     </div>
   </section>
 
-  <!-- PROJECT 2 (placeholder) -->
+  <!-- PROJECT 3 -->
   <section class="section reveal">
     <div class="section-content">
-
       <div class="section-image">
-        <img class="large-img" src="assets/images/2kh_high_pass.png" alt="High pass filter visualization" />
+        <img class="large-img" src="assets/images/asr_whisper_auENG.png" alt="Process diagram showing secure local speech transcription and speaker identification within an offline environment. Made with Google Gemini." />
       </div>
 
       <div class="section-text">
         <h2>Locally executed Automatic Speech Transcription and Speaker Identification</h2>
         <ul>
-          <li>The dataset comprised videos of patient interviews.</li>
-          <li>These were sensitive and online transcription was to be avoided.</li>
-          <li>I built a local-machine solution using OpenAI's <a href="https://openai.com/index/whisper/" target="_blank" rel="noopener">  Whisper</a> model, incorporating Automatic Speech Recognition (ASR), timestamping and diarisation by identifying multiple speakers.</li>
+          <li>The dataset comprised videos of patient interviews</li>
+          <li>These were sensitive and online transcription was to be avoided</li>
+          <li>I built a local-machine solution using OpenAI's <a href="https://openai.com/index/whisper/" target="_blank" rel="noopener">  Whisper</a> model, incorporating Automatic Speech Recognition (ASR), timestamping and diarisation by identifying multiple speakers</li>
         </ul>
         <div class="widgets">
-          <img src="assets/icons/python-colour.svg" alt="Python" class="widget-icon">
           <img src="assets/icons/python-happy.png" alt="Python" class="widget-icon">
           <img src="assets/icons/github-mark-white.svg" alt="GitHub" class="widget-icon">
         </div>
@@ -96,6 +115,13 @@
 
     </div>
   </section>
+
+<p style="text-align:center; margin-top:2rem;">
+  <a href="contact.html"
+     style="color:var(--accent); font-weight:600; font-size:1.15rem; text-decoration:none;">
+    Contact me
+  </a>
+</p>
 
 </main>
 
