--- a/services.html
+++ b/services.html
@@ -23,14 +23,14 @@
     </div>
 
     <nav id="desktop-nav" class="nav-links" aria-label="Main navigation">
-      <a href="index.html">Home</a>
+      <a href="index.html">About</a>
       <a href="projects.html">Projects</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
     </nav>
 
     <nav id="mobile-nav" class="nav-links" aria-label="Mobile navigation">
-      <a href="index.html">Home</a>
+      <a href="index.html">About</a>
       <a href="projects.html">Projects</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
@@ -41,92 +41,160 @@
 <main>
 
 <!-- PAGE TITLE -->
-  <h1 class="page-title">Research Support<br>
-    <span class="small-text">Consulting Rates</span>
+  <h1 class="page-title">Data Science & Research Support<br>
+    <span class="small-text">Data Analytics and Coding</span>
   </h1>
 
-  <!-- HOURLY -->
+  <!-- SECTION 1: Deciphering your Data -->
   <section class="section reveal">
-    <div class="section-content">
-
-      <div class="section-text">
-        <h2>Hourly Consulting</h2>
-        <ul>
-          <li>Rapid support for urgent deadlines</li>
-          <li>Fix broken scripts or outdated workflows</li>
-          <li>One-off data cleaning or repair tasks</li>
-        </ul>
-        <div class="price-tag">$120/hr</div>
+    <div class="section-content reverse">
+      <div class="section-image">
+        <img class="large-img" src="assets/images/messy-to-clean_cropped.jpg" alt="Disorganised to organised visualization. Made with Google Gemini" />
       </div>
 
-      <div class="section-image">
-        <img class="large-img" src="assets/images/2kh_high_pass.png" alt="High pass filter visualization" />
+      <div class="section-text">
+        <h2>Deciphering your Data</h2>
+        <ul>
+          <li>Data organisation and cleaning</li>
+          <li>Exploratory Data Analysis (EDA)</li>
+          <li>Find key datapoints and connections between</li>
+        </ul>
+		<!--	
+        <div class="widgets">
+          <img src="assets/icons/Microsoft_Office_Excel_(2019–2025).svg" alt="Matlab" class="widget-icon">
+          <img src="assets/icons/Matlab_Logo.png" alt="Matlab" class="widget-icon">
+        </div>
+		-->
+      </div>
     </div>
   </section>
 
-  <!-- DAILY -->
+  <!-- SECTION 2: Statistical Analysis -->
   <section class="section reveal">
-    <div class="section-content">
+    <div class="section-content reverse">
+      <div class="section-image">
+        <img class="large-img" src="assets/images/f0_age_gender_vowel_final.svg" alt="F0 by age and gender" />
+      </div>
 
       <div class="section-text">
-        <h2>Short-Term Projects</h2>
+        <h2>Statistical Analysis</h2>
         <ul>
-          <li>Code review, update and improvement</li>
-          <li>Data analyses including statistical outputs and visualisations</li>
-          <li>Data collection and storage workflow setup and audit</li>
+          <li>Run statistical analyses tailored to your data</li>
+          <li>Produce engaging and informative visuals</li>
+          <li>Employ mixed models with multi-modal data</li>
         </ul>
-        <div class="price-tag">$750/day</div>
+		<!--
+        <div class="widgets">
+          <img src="assets/icons/R_logo.svg" alt="Matlab" class="widget-icon">
+          <img src="assets/icons/Logo_SPSS.png" alt="SPSS" class="widget-icon">
+        </div> 
+		-->
       </div>
-
-      <div class="section-image">
-        <img class="large-img" src="assets/images/2kh_high_pass.png" alt="High pass filter visualization" />
-      </div>
-
     </div>
   </section>
 
-  <!-- WEEKLY -->
+  <!-- SECTION 3: Coding and Large Language Models -->
   <section class="section reveal">
-    <div class="section-content">
+    <div class="section-content reverse">
+      <div class="section-image">
+        <img class="large-img" src="assets/images/local_llm.png" alt="Local LLM graphic" />
+      </div>
 
       <div class="section-text">
-        <h2>Medium-Term Projects</h2>
+        <h2>Coding and Large Language Models</h2>
         <ul>
-          <li>App development</li>
-          <li>Graphical User Interfaces (GUI) implementation for code</li>
-          <li>Comprehensive data collection, manipulation and analysis auditing</li>
+          <li>Build a field/clinic data collection App</li>
+          <li>Setup a local Large Language Model (LLM) to process sensitive data</li>
+          <li>Streamline routine analysis workflows with a Graphical User Interface (GUI)</li>
         </ul>
-        <div class="price-tag">$3,500/week</div>
+		<!--
+        <div class="widgets">
+          <img src="assets/icons/python-happy.png" alt="Python" class="widget-icon">
+          <img src="assets/icons/Machine-Learning-Brain.svg" alt="Machine-Learning-Brain" class="widget-icon">
+        </div>
+		-->
       </div>
-
-      <div class="section-image">
-        <img class="large-img" src="assets/images/2kh_high_pass.png" alt="High pass filter visualization" />
-      </div>
-
     </div>
   </section>
 
+	<!-- CONSULTING DIVIDER -->
+	<div class="section-divider">
+	  <hr>
+	</div>
 
-  <!-- MONTHLY AND MORE -->
-  <section class="section reveal">
-    <div class="section-content">
+	<!-- CONSULTING GRID -->
+	<section class="section reveal">
+	  <div class="section-content">
+		<div class="centered-section">
 
-      <div class="section-text">
-        <h2>Long-Term Engagements</h2>
-        <ul>
-          <li>Multi-month research projects</li>
-          <li>Research project set-up and running</li>
-          <li>Report and archive a closing project</li>
-        </ul>
-        <div class="price-tag">Contact for rates</div>
-      </div>
+		  <h1>Consulting Services</h1>
+		  <h2>Flexible engagement options to suit different project timeframes</h2>
 
-      <div class="section-image">
-        <img class="large-img" src="assets/images/2kh_high_pass.png" alt="High pass filter visualization" />
-      </div>
+		  <div class="language-grid">
 
-    </div>
-  </section>
+			<!-- Hourly -->
+			<div class="language-card language-card-left">
+ 			  <h3>
+			    <span class="lang-title">Hourly Consulting</span>
+			    <!-- <span class="lang-meta">($120 / hour, &lt; 7 hours)</span> -->
+			  </h3>
+			  <ul>
+				<li>Rapid support for urgent deadlines</li>
+				<li>Fix broken scripts or outdated workflows</li>
+				<li>One-off data cleaning or repair tasks</li>
+			  </ul>
+			</div>
+
+			<!-- Short-term -->
+			<div class="language-card language-card-left">
+			  <h3>
+				<span class="lang-title">Day Projects</span>
+			    <!-- <span class="lang-meta">($750 / day, &lt; 5 days)</span> -->
+			  </h3>
+			  <ul>
+				<li>Code review, update and improvement</li>
+				<li>Data analyses with statistical outputs and visualisations</li>
+				<li>Data collection and storage workflow setup and audit</li>
+			  </ul>
+			</div>
+
+			<!-- Medium-term -->
+			<div class="language-card language-card-left">
+			  <h3>
+				<span class="lang-title">Week Projects</span>
+			    <!-- <span class="lang-meta">($3,500 / week, &gt; 1 week)</span> -->
+			  </h3>
+			  <ul>
+				<li>Graphical User Interfaces (GUI) for workflows</li>
+				<li>Comprehensive data collection and analysis auditing</li>
+				<li>App development</li>
+			  </ul>
+			</div>
+
+			<!-- Long-term -->
+			<div class="language-card language-card-left">
+			  <h3>
+				<span class="lang-title">Longer-Term Engagements</span>
+			    <!-- <span class="lang-meta">(Contact for rates)</span> -->
+			  </h3>
+			  <ul>
+				<li>Research project set-up and delivery</li>
+				<li>Involvement with the research team through a projects timeline</li>
+				<li>Final reporting and archival closure</li>
+			  </ul>
+			</div>
+
+		  </div>
+		</div>
+	  </div>
+	</section>
+
+<p style="text-align:center; margin-top:2rem;">
+  <a href="contact.html"
+     style="color:var(--accent); font-weight:600; font-size:1.15rem; text-decoration:none;">
+    Contact me
+  </a>
+</p>
 
 </main>
 
