--- a/success.html
+++ b/success.html
@@ -18,13 +18,13 @@
       <button id="mobile-menu-button" class="mobile-menu-toggle">☰</button>
     </div>
     <nav id="desktop-nav" class="nav-links">
-      <a href="index.html">Home</a>
+      <a href="index.html">About</a>
       <a href="projects.html">Projects</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
     </nav>
     <nav id="mobile-nav" class="nav-links">
-      <a href="index.html">Home</a>
+      <a href="index.html">About</a>
       <a href="projects.html">Projects</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
@@ -35,7 +35,7 @@
 <main>
 
 <!-- PAGE TITLE -->
-  <h1 class="page-title">Research Support<br>
+  <h1 class="page-title">Data Science & Research Support<br>
     <span class="small-text">Data Analytics and Coding</span>
   </h1>
 
