--- a/index.html
+++ b/index.html
@@ -278,6 +278,10 @@
 <!-- External JS -->
 <script src="js/scripts.js"></script>
 
+<button id="retro-toggle" aria-label="Toggle Retro Skin" title="Toggle Retro Skin">
+  CRT
+</button>
+
 <button id="back-to-top" aria-label="Back to Top" title="Back to Top">
   ↑
 </button>
