--- a/index.html
+++ b/index.html
@@ -255,8 +255,15 @@
 
 <footer>
   <div class="footer-row">
-    <!-- Left: Name -->
     <div class="footer-left">
+	  <button id="retro-toggle" aria-label="Secret Skin Toggle">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <rect x="2" stroke="currentColor" y="3" width="20" height="14" rx="2" ry="2"></rect>
+          <line x1="8" y1="21" x2="16" y2="21"></line>
+          <line x1="12" y1="17" x2="12" y2="21"></line>
+        </svg>
+      </button>
+    <!-- Left: Name -->
       John Holik
     </div>
 
@@ -277,10 +284,6 @@
 
 <!-- External JS -->
 <script src="js/scripts.js"></script>
-
-<button id="retro-toggle" aria-label="Toggle Retro Skin" title="Toggle Retro Skin">
-  CRT
-</button>
 
 <button id="back-to-top" aria-label="Back to Top" title="Back to Top">
   ↑
