--- a/index.html
+++ b/index.html
@@ -256,11 +256,10 @@
 <footer>
   <div class="footer-row">
     <div class="footer-left">
-    <!-- Left: Name -->
       John Holik
     </div>
 
-	<div class="footer-middle">
+    <div class="footer-middle">
       <button id="retro-toggle" aria-label="Secret Skin Toggle">
         <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
           <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
@@ -269,10 +268,9 @@
         </svg>
       </button>
     </div>
-	
-    <!-- Right: Social Icons -->
-    <div class="footer-center">
-      <a href="https://github.com/johnholik" target="_blank" aria-label="GitHub">
+
+    <div class="footer-right">
+       <a href="https://github.com/johnholik" target="_blank" aria-label="GitHub">
         <img src="assets/icons/github-mark.svg" alt="GitHub" />
       </a>
       <a href="https://orcid.org/0009-0009-9741-0025" target="_blank" aria-label="ORCID">
