--- a/index.html
+++ b/index.html
@@ -255,30 +255,16 @@
 
 <footer>
   <div class="footer-row">
-    <div class="footer-left">
-      John Holik
-    </div>
-
+    <div class="footer-left">John Holik</div>
     <div class="footer-middle">
       <button id="retro-toggle" aria-label="Secret Skin Toggle">
-        <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-          <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
-          <line x1="8" y1="21" x2="16" y2="21"></line>
-          <line x1="12" y1="17" x2="12" y2="21"></line>
-        </svg>
+        <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect><line x1="8" y1="21" x2="16" y2="21"></line><line x1="12" y1="17" x2="12" y2="21"></line></svg>
       </button>
     </div>
-
     <div class="footer-right">
-       <a href="https://github.com/johnholik" target="_blank" aria-label="GitHub">
-        <img src="assets/icons/github-mark.svg" alt="GitHub" />
-      </a>
-      <a href="https://orcid.org/0009-0009-9741-0025" target="_blank" aria-label="ORCID">
-        <img src="assets/icons/orcid-1.png" alt="ORCID" />
-      </a>
-      <a href="https://www.linkedin.com/in/john-holik-medical-physics/" target="_blank" aria-label="LinkedIn">
-        <img src="assets/icons/linkedin-InBug-Black.png" alt="LinkedIn" />
-      </a>
+      <a href="https://github.com/johnholik" target="_blank"><img src="assets/icons/github-mark.svg" alt="GitHub"></a>
+      <a href="https://orcid.org/0009-0009-9741-0025" target="_blank"><img src="assets/icons/orcid-1.png" alt="ORCID"></a>
+      <a href="https://www.linkedin.com/in/john-holik-medical-physics/" target="_blank"><img src="assets/icons/linkedin-InBug-Black.png" alt="LinkedIn"></a>
     </div>
   </div>
 </footer>
