--- a/contact.html
+++ b/contact.html
@@ -85,6 +85,13 @@
       John Holik
     </div>
 
+    <!-- CENTER: Hidden CRT Toggle -->
+    <button
+      id="crt-toggle"
+      aria-label="Toggle CRT mode"
+      title="CRT mode"
+    ></button>
+	
     <!-- Right: Social Icons -->
     <div class="footer-center">
       <a href="https://github.com/johnholik" target="_blank" aria-label="GitHub">
