--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <h3>Teaching</h3>
       <ul>
         <li>In my role in the Syndey Voice Lab I provided assistance and guidance to Speech Pathology Honours students</li>
-        <li>I have over 10 years experience running tutorials and laboratories in first year Radiation Physics, Physics, Statistics and Mathematics accross both The University of Sydney and Western Sydney University</li>
+        <li>I have over 10 years experience running tutorials and laboratories in first year Radiation Physics, Physics, Statistics and Mathematics across both The University of Sydney and Western Sydney University</li>
       </ul>
 
     </div>
@@ -179,7 +179,7 @@
 			    <img src="assets/posters/Poster_Holik_VRT_Measurement_For_Vowel_Onset__AQL_2025__final_2_small.jpg" alt="AQL Conference Poster">
 			  </div>
 		    </span>
-		    <em>Advances in Quantitative Laryngology, Voice and Speech Research (16<sup>th</sup>) — Groningen, June 24 – 27, 2025</em>.
+		    <em>Advances in Quantitative Laryngology, Voice and Speech Research (16<sup>th</sup>) — Groningen, 24-27 June, 2025</em>.
 		  </li>
           <li>Tuende Szalay, Duy Duong Nguyen, <b>John Holik</b>, Antonia Chacon, James Morandini, Catherine J. Madill (2024) - Acoustic Differences Between Gay And Straight Male Speakers Of Australian English, <em>The Voice Foundation, 53<sup>rd</sup> Annual symposium, Philadelphia, 29 May – 3 June 2024</em>.</li>
 		  <li>
@@ -225,7 +225,7 @@
       <details class="pub-details">
         <summary>Technical Reports</summary>
         <ul class="publications-list">
-          <li><b>John Holik</b>, Marta Bello Lamo, R Ding, J J Lee, Sean Li, D Wang, Richard Wuhrer and Leigh R Sheppard (2014) - Development of Sputtered Films for Solar-Hydrogen Production at UWS Hawkesbury <em>Materials Australia, Vol 47, No 1, June.</em></li>
+          <li><b>John Holik</b>, Marta Bello Lamo, R Ding, J J Lee, Sean Li, D Wang, Richard Wuhrer and Leigh R Sheppard (2014) - Development of Sputtered Films for Solar-Hydrogen Production at UWS Hawkesbury <em>Materials Australia, Vol 47, No 1, June 2014.</em></li>
         </ul>
       </details>
 
