--- a/projects.html
+++ b/projects.html
@@ -55,8 +55,8 @@
       <div class="section-text">
         <h2>Acoustic Measurement App</h2>
         <ul>
-          <li>PC based measurment not being utilised in the clinic</li>
-          <li>Measurment algorithms and technique reproduced in a mobile app</li>
+          <li>PC based measurement not being utilised in the clinic</li>
+          <li>Measurement algorithms and technique reproduced in a mobile app</li>
           <li>Patients/clients can run the app in the waiting room, so data collection is activated in this setting</li>
         </ul>
         <div class="widgets">
@@ -81,7 +81,7 @@
         <ul>
           <li>Audio waveforms required to be parsed, measured and edited</li>
           <li>Built GUI tool for timestamping & annotation</li>
-          <li>Workflow speed and accuracy greatly imporoved</li>
+          <li>Workflow speed and accuracy greatly improved</li>
         </ul>
 
         <div class="widgets">
