--- a/services.html
+++ b/services.html
@@ -179,7 +179,7 @@
 			  </h3>
 			  <ul>
 				<li>Research project set-up and delivery</li>
-				<li>Involvement with the research team through a projects timeline</li>
+				<li>Involvement with the research team through a project's timeline</li>
 				<li>Final reporting and archival closure</li>
 			  </ul>
 			</div>
