Add intro to images
Added an italic section of one or two lines introducing each project and service section.

--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,11 @@
 
   <!-- PROJECT 1 -->
   <section class="section reveal">
-    <div class="section-content">
+  <div class="section-intro">
+    <p>From the desktop to the waiting room: making data collection mobile.</p>
+  </div>
+
+  <div class="section-content">
       <div class="section-image">
         <img class="large-img" src="assets/images/NeAP_android_Studio_screenshot_tight.png" alt="NeAP pitch discrimination App Android Studio screenshot" />
       </div>
@@ -71,6 +75,10 @@
 
   <!-- PROJECT 2 -->
   <section class="section reveal">
+  <div class="section-intro">
+    <p>Optimizing the audio pipeline: replacing general-purpose editing with a specialised single-click segmentation and automated naming tool.</p>
+  </div>
+
     <div class="section-content reverse">
       <div class="section-image">
         <img class="large-img" src="assets/images/audio_visual_parse_gui.png" alt="High pass filter visualization" />
@@ -95,6 +103,10 @@
 
   <!-- PROJECT 3 -->
   <section class="section reveal">
+  <div class="section-intro">
+    <p>Ensuring data privacy: local deployment of speech-to-text and speaker identification for sensitive clinical interviews.</p>
+  </div>
+
     <div class="section-content">
       <div class="section-image">
         <img class="large-img" src="assets/images/asr_whisper_auENG.png" alt="Process diagram showing secure local speech transcription and speaker identification within an offline environment. Made with Google Gemini." />
