--- a/services.html
+++ b/services.html
@@ -47,6 +47,10 @@
 
   <!-- SECTION 1: Deciphering your Data -->
   <section class="section reveal">
+  <div class="section-intro">
+    <p>I am a research scientist with a passion for extracting maximum value from your hard won data. Let me make sense of complicated data sets by cleaning, organsising and generating illuminating plots.</p>
+  </div>
+
     <div class="section-content reverse">
       <div class="section-image">
         <img class="large-img" src="assets/images/messy-to-clean_cropped.jpg" alt="Disorganised to organised visualization. Made with Google Gemini" />
@@ -71,6 +75,10 @@
 
   <!-- SECTION 2: Statistical Analysis -->
   <section class="section reveal">
+  <div class="section-intro">
+    <p>Statistical analysis is not everybodies strong suit. Let me apply cutting edge techniques to your data so we can find those trends and outcomes which you know are in there!</p>
+  </div>
+
     <div class="section-content reverse">
       <div class="section-image">
         <img class="large-img" src="assets/images/f0_age_gender_vowel_final.svg" alt="F0 by age and gender" />
@@ -95,6 +103,10 @@
 
   <!-- SECTION 3: Coding and Large Language Models -->
   <section class="section reveal">
+  <div class="section-intro">
+    <p>Coding and app development is becoming accessable to all. I can build these systems tailored to your needs.</p>
+  </div>
+
     <div class="section-content reverse">
       <div class="section-image">
         <img class="large-img" src="assets/images/local_llm.png" alt="Local LLM graphic" />
@@ -129,6 +141,10 @@
 
 		  <h1>Consulting Services</h1>
 		  <h2>Flexible engagement options to suit different project timeframes</h2>
+		  <div class="section-intro">
+			<p>This project focused on bridging the gap between clinical research and real-world mobile accessibility.</p>
+		  </div>
+
 
 		  <div class="language-grid">
 
