--- a/index.html
+++ b/index.html
@@ -52,17 +52,18 @@
 
 <!-- SECTION 0: Bio -->
 <section class="section reveal" id="bio">
-  <div class="section-content">
-
-    <!-- LEFT: Text -->
-    <div class="section-text">
+  <div class="section-intro">
+    <img src="assets/images/DLVP_headshot_1_small.jpg" alt="Headshot" class="intro-image">
       <h2>John Holik</h2>	
       <p>
         I am a researcher working at the intersection of speech science, signal processing,
         and applied analytics. My work focuses on developing automated methods for analysing complex
         acoustic and behavioural data with an emphasis on reliability, transparency, and practical impact.
       </p>
+  </div>
 
+  <div class="section-content">
+    <div class="section-text">
       <h3>Experience</h3>
       <ul>
         <li>Researcher in speech and audio analytics at the <a href="https://www.sydney.edu.au/medicine-health/industry-and-community/community-engagement/sydney-voice-lab.html"
@@ -78,13 +79,6 @@
         <li>I have over 10 years experience running tutorials and laboratories in first year Radiation Physics, Physics, Statistics and Mathematics across both The University of Sydney and Western Sydney University</li>
       </ul>
 
-    </div>
-
-    <!-- RIGHT: Headshot -->
-    <div class="section-image">
-      <img class="large-img headshot" 
-           src="assets/images/DLVP_headshot_1_small.jpg" 
-           alt="Portrait of John Holik" />
     </div>
 
   </div>
